# make-mp3-copies

./: .gitignore  Main.hs  MakeMP3Copies.cabal  MakeMP3Copies.hs  README.md  README.org
