cabal-version:      >= 1.6
build-type:         Simple
name:               MakeMP3Copies
version:            0.1.0
license:            UNLICENSE
license-file:       LICENSE
category:           Sound
author:             Harold Carr <harold.carr@gmail.com>
maintainer:         Harold Carr <harold.carr@gmail.com>
copyright:          Harold Carr 2013
synopsis:           Make MP3 copies of FLAC files.
description:        Make MP3 copies of FLAC files.
homepage:           https://github.com/haroldcarr/make-mp3-copies
stability:          Beta

source-repository head
    type:     git
    location: git://github.com/haroldcarr/make-mp3-copies

flag threaded
    default: False
    description: Do not know if it could run with build support for multithreaded execution

library
    build-depends:      shelly >= 1.3.0.7
    exposed-modules:    MakeMP3Copies

executable MakeMP3Copies
    build-depends:      shelly
    main-is:            MakeMP3Copies.hs
    ghc-options:
    if flag(threaded)
        ghc-options:    -threaded
